@@ -1,3 +1,9 @@
+1999-07-06  Harri Porten  <porten@kde.org>
+
+	* modem.cpp: adhere to the lock file format described in the
+	Serial HOWTO (10 digits pid and a newline).
+	* edit.cpp: fixed highlighting in ScriptWidget
+
 1999-06-11  Harri Porten  <porten@kde.org>
 
 	* pppdata.cpp: line termination will default to CR instead of CR/LF.
